# vlog-subs-tool

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_OPTIMIZATION_RESULTS.md  CLAUDE.md  DESIGN.md  ERROR_HANDLING_SUMMARY.md  LICENSE  Makefile  README.md  REFACTORE.md  pyproject.toml  pytest.ini  requirements.txt  test_multiline_logic.py  test_paddleocr_fix.py  test_srt_multiline.py  test_subtitle_extraction.py  test_table_highlight.py  test_ui_multiline.py  vlog-subs-tool-debug.spec  vlog-subs-tool-macos.spec  vlog-subs-tool.spec
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: build-binaries.yml  build-debug-windows.yml  build-test.yml  codeql.yml  pr-tests.yml  release.yml
app/: __init__.py  main.py
app/config/: app.yml
app/core/: __init__.py  benchmark.py  cpu_profiler.py  error_handler.py  linux_optimizer.py  models.py  project_manager.py  settings_manager.py
app/core/csv/: __init__.py  exporter.py  importer.py
app/core/extractor/: detector.py  group.py  ocr.py  roi.py  sampler.py
app/core/format/: srt.py
app/core/qc/: rules.py
app/core/translate/: __init__.py  language_detector.py  provider_deepl.py  provider_google.py  provider_local.py  provider_mock.py  provider_router.py
app/models/: README.md
app/models/paddleocr/PP-OCRv5_server_rec/: inference.yml
app/ui/: __init__.py  extraction_worker.py  main_window.py
app/ui/dialogs/: language_selection_dialog.py  multilang_export_dialog.py  ocr_setup_dialog.py
app/ui/views/: __init__.py  player_view.py  settings_view.py  table_view.py  translate_view.py
app/ui/workers/: __init__.py  translation_export_worker.py
hooks/: hook-cv2.py  hook-paddleocr.py
scripts/: build_binary.py  build_binary.sh  setup-dev-env.sh
tests/: README.md  conftest.py  test_cross_platform_ocr.py  test_paddle_ocr_extraction.py  test_paddle_ocr_memory_safety.py  test_runner.py
tests/fixtures/: create_test_subtitle_images.py
tests/integration/: test_csv_import_export_integration.py  test_main_window.py  test_mock_translation_complete.py  test_mock_translation_standalone.py  test_ocr_flow_integration.py  test_provider_initialization.py  test_translation_srt_export.py
tests/ui/: test_multiline_editing_ui.py  test_preview_sync_progress.py  test_subtitle_table_editing.py  test_table_multiline_display.py
tests/unit/: test_adaptive_thread_integration.py  test_apple_silicon_ocr.py  test_benchmark.py  test_cpu_profiler.py  test_csv_modules.py  test_duplicate_merge_logic.py  test_error_handling.py  test_file_io_formats.py  test_integration_duplicate_merge.py  test_linux_optimizer.py  test_local_translation.py  test_local_translation_basic.py  test_models.py  test_project_manager.py  test_qc_rules.py  test_real_duplicate_cases.py  test_settings_manager.py  test_srt.py  test_srt_multiline.py  test_subtitle_table.py  test_transitive_duplicate.py  test_windows_ocr_performance.py
tests/unit/extractor/: test_duplicate_merge.py  test_multiline_detection.py  test_time_constrained_merge.py
tests/unit/workers/: __init__.py  test_fixed_translation_worker.py  test_google_translate_settings_standalone.py  test_translation_export_worker.py
